* FEA#7975 Add action on indemnification detail lines to delete the related indemnification
* OTH#0000 Hide invoice line in indemnification if empty following 7802
* BUG#7893 Add rule engine method to define wether an indemnification is manual or not.
* BUG#7891 Indemnification process fixes for some required fields
* FEA#7850 Enhance claim services display in indemnifications wizard
* BUG#7583 Various fixes on claim indemnification process
* FEA#7747 Add methods to the rule engine for indemnification calculation
* FEA#7802 Display indemnification invoice details
* BUG#7766 Filter services in indemnifications wizard
* BUG#7756 Add "Can be indemnificated" field on claim services
* BUG#7642 Error when creating a loss with an end_date inside a deductible period
* BUG#7621 Do not display indemnification beneficiary share warning if the delegation for the insurer doesn't contain calculate or pay indemnification

Version 1.14 - 2017-11-09
* BUG#7179 Claim invoices payment lines are now properly reconciled when beneficiaries had overdue
* OTH#0000 fix test scenario
* BUG#7095 Fix crash in indemnification creation batch because of missing currency
* FEA#7046 Improve indemnification validation and control view
* BUG#7044 Don't try to cancel an already cancel indemnification
* BUG#6882 Some warnings or errors are no more raised when closing a claim with refused services
* FEA#5907 Manage multiple indemnifications on a given period
* BUG#6632 Fix crash in calculating indemnification gaps when closing a claim
* BUG#6504 Don't invoice when payback method is continuous and invoice has a negative sum
* OTH#0000 Warning fixes on class Configuration when server starts
* BUG#6358 Use today to check bank account when scheduling an indemnification
* BUG#6346 The indemnification creation batch will create indemnifications with the same properties as the last one created for a given service